# 1-chat-group

./: .gitignore  CMakeLists.txt  README.md  auto_build.sh
1-集群聊天项目/: 1-集群项目笔记.md  2-集群项目笔记.md  3-面试.md  test.txt  知识补充.md  错误和小优化.md
1-集群聊天项目/资料/C  集群聊天项目资料/资料/: 项目源码github地址.txt
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.h
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
package/boost_1_88_0/: project-config.jam
package/boost_1_88_0/bin.v2/: project-cache.jam
package/boost_1_88_0/doc/antora/: sitemap.xml
package/boost_1_88_0/stage/lib/: libboost_atomic.so.1.88.0  libboost_charconv.so.1.88.0  libboost_container.so.1.88.0  libboost_contract.so.1.88.0  libboost_date_time.so.1.88.0  libboost_fiber.so.1.88.0  libboost_json.so.1.88.0  libboost_locale.so.1.88.0  libboost_math_c99.so.1.88.0  libboost_math_tr1f.so.1.88.0  libboost_process.so.1.88.0  libboost_program_options.so.1.88.0  libboost_python311.so.1.88.0  libboost_stacktrace_addr2line.so.1.88.0  libboost_stacktrace_basic.so.1.88.0  libboost_stacktrace_noop.so.1.88.0  (+6 more)
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/testjson/: testjson  testjson.cpp
test/testmuduo/: CMakeLists.txt  nuduo_server.cpp
(+310 files in other folders)
